--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <button class="button" type"button" onclick="getImage()">New Cat</button>
   </div>
   <script>
-    script.js
+    src="script.js"
   </script>
 </body>
