--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
   <div class="btn">
     <button class="button" type"button" onclick="getImage()">New Cat</button>
   </div>
-  <script>
-    src="script.js"
-  </script>
+  <script src="script.js"></script>
 </body>
